# Single-Video-Target-Tracking-and-Demonstration-System-Based-on-Kernel-Correlation-Filter

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  viewer_cn.qm  viewer_cn.ts
include/: CamWidget.h  funcs.h  viewer.h
kcf/: CMakeLists.txt  LICENSE.thirdparty  fhog.cpp  fhog.hpp  kcftracker.cpp  kcftracker.hpp  recttools.hpp
src/: CMakeLists.txt  CamWidget.cpp  funcs.cpp  main.cpp  viewer.cpp
